--- a/release/help/seqGDS2SNP.html
+++ b/release/help/seqGDS2SNP.html
@@ -9,7 +9,7 @@
 
 <h3>Description</h3>
 
-<p>Converts a sequence GDS file to a SNP GDS file.
+<p>Converts a SeqArray GDS file to a SNP GDS file.
 </p>
 
 
@@ -94,5 +94,5 @@ seqGDS2SNP(gds.fn, "tmp.gds")
 unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.10.2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.12.0 <a href="00Index.html">Index</a>]</div>
 </body></html>
